--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Wonuola Omolola
-#logo: /assets/img/headshot_circle.png
+logo: Assets/Screenshot 2024-08-31 224533.png
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
