--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Wonuola Omolola
-logo: Assets/Screenshot 2024-08-31 224533.png
+logo: Assets/Profilephoto.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
